[gd_scene load_steps=3 format=3 uid="uid://t6ng2t2ive67"]

[ext_resource type="Texture2D" uid="uid://c0gpewc6bj3mm" path="res://Art/Icon/backpack.png" id="1_gho41"]
[ext_resource type="Script" path="res://Script/Open_Bag.gd" id="2_q3ems"]

[node name="TextureButton_Bag" type="TextureButton"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_left = 0.904514
anchor_right = 0.993403
anchor_bottom = 0.158025
offset_right = 409.6
offset_bottom = 409.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_gho41")
script = ExtResource("2_q3ems")
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
